--- a/MVC_MultitecUA/Views/Mensaje/VistaUsuario/MisMensajesEnviados.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/VistaUsuario/MisMensajesEnviados.cshtml
@@ -1,27 +1,24 @@
 ﻿@model IEnumerable<MVC_MultitecUA.Models.MensajeModel>
 
 @{
-	ViewBag.Title = "Mis mensajes filtrados";
+	ViewBag.Title = "Enviados";
 }
 
-<h2>Mis mensajes filtrados</h2>
+<h2>Enviados</h2>
 <p class="text-center">
 	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mis mensajes", "MisMensajes")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
-	<h3>Filtros:</h3>
 
 	@using (Html.BeginForm("FiltroUsuario", "Mensaje"))
 	{
 		<div class="form-horizontal">
 			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-			<div class="form-group">
+			<div class="form-group form-inline">
 				<div class="col-md-10">
-
-					<label for="titulo">Título del mensaje: </label><input class="form-control" type="text" name="titulo" />
 					<label for="EstadoLectura">Bandeja: </label>
 					@Html.DropDownList("Bandeja", new SelectList((System.Collections.IEnumerable)ViewData["Bandejas"]), new { @class = "form-control" })
-					<input type="submit" value="Filtrar" class="btn btn-default" />
+					<input type="submit" value="Cambiar" class="btn btn-default" />
 				</div>
 			</div>
 		</div>
@@ -47,46 +44,81 @@
 	}
 	else
 	{
-		<table class="table">
-			<tr>
-				<th>
-					@Html.DisplayNameFor(model => model.NickReceptor)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Titulo)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.BandejaAutor)
-				</th>
-				<th>
-					@Html.DisplayNameFor(model => model.Fecha)
-				</th>
-				<th>
-					Acciones
-				</th>
-			</tr>
-
-			@foreach (var item in Model)
-			{
-				<tr>
-					<td>
-						@Html.ActionLink(item.NickReceptor, "Detalles", "Usuario", new { nick = item.NickReceptor }, null)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.Titulo)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.BandejaAutor)
-					</td>
-					<td>
-						@Html.DisplayFor(modelItem => item.Fecha)
-					</td>
-					<td>
-						@Html.ActionLink("Detalles", "DetalleMensajeEnviado", new { id = item.Id })
-					</td>
+		<table class="table table-hover text-center">
+			<thead>
+				<tr style="background-color: gainsboro;">
+					<th class="text-center" style="width:20%">
+						@Html.DisplayNameFor(model => model.Titulo)
+					</th>
+					<th class="text-center" style="width:40%">
+						@Html.DisplayNameFor(model => model.Cuerpo)
+					</th>
+					<th class="text-center" style="width:15%">
+						@Html.DisplayNameFor(model => model.Fecha)
+					</th>
+					<th class="text-center" style="width:10%">
+						@Html.DisplayNameFor(model => model.NickAutor)
+					</th>
+					<th class="text-center" style="width:15%">
+						Acciones
+					</th>
 				</tr>
-			}
+				@using (Html.BeginForm("FiltroUsuario", "Mensaje"))
+				{
+					<tr>
+						<th class="text-center">
+							<input class="form-control text-center" type="text" name="titulo" placeholder="Título del mensaje" style="margin:auto" />
+						</th>
+						<th class="text-center">
 
+						</th>
+						<th class="text-center">
+
+						</th>
+						<th class="text-center">
+
+						</th>
+						<th class="text-center">
+
+						</th>
+					</tr>
+				}
+			</thead>
+			<tbody>
+				@foreach (var item in Model)
+				{
+					String estiloFila = "";
+
+
+					if (item.EstadoLectura.ToString() == "Leido")
+					{
+
+						estiloFila = "bg-warning";
+
+					}
+
+					<tr class="@estiloFila" onclick="window.location='./DetalleMensajeRecibido?id='+@item.Id" style="cursor:pointer;">
+
+						<td>
+							@Html.DisplayFor(modelItem => item.Titulo)
+						</td>
+						<td class="text-center" style="text-overflow: ellipsis; overflow: hidden; max-width:10em; white-space: nowrap;">
+							@item.Cuerpo
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => item.Fecha)
+						</td>
+						<td>
+							@Html.ActionLink(item.NickAutor, "Detalles", "Usuario", new { nick = item.NickAutor }, null)
+						</td>
+						<td style="display:flex; justify-content:space-evenly;">
+							@Html.ActionLink(" ", "CambioBandejaAutor", new { id = item.Id, cambioBandejaAutor = "Archivado" }, new { @class = "glyphicon glyphicon-inbox", @title = "Archivar" })
+							@Html.ActionLink(" ", "CambioBandejaAutor", new { id = item.Id, cambioBandejaAutor = "Borrado" }, new { @class = "glyphicon glyphicon-trash", @title = "Eliminar" })
+						</td>
+
+					</tr>
+				}
+			</tbody>
 		</table>
 	}
 }
