--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Detalles.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Detalles.cshtml
@@ -167,8 +167,9 @@
             @Html.ActionLink("Eliminar", "Delete", new { id = Model.Id })
         </p>
     }
-    else if (ViewData["noParticpante"] != null && ViewData["noParticpante"].ToString()=="true")
+    else if (ViewData["noParticpante"] != null && ViewData["noParticpante"].ToString() == "true")
     {
         @Html.ActionLink("Enviar solicitud", "EnviarSolicitud", "Solicitud", new { proyectoId = Model.Id }, new { @class = "btn btn-default" })
     }
-    </div>
+    @Html.ActionLink("Volver a la lista", "ProyectosPresentados")
+</div>
