--- a/MVC_MultitecUA/Views/Shared/_Layout.cshtml
+++ b/MVC_MultitecUA/Views/Shared/_Layout.cshtml
@@ -12,7 +12,18 @@
     @using MultitecUAGenNHibernate.EN.MultitecUA;
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    @{
+        var navclass = "";
+        if (Session["modoAdmin"] != null && Session["modoAdmin"].ToString() == "true")
+        {
+            navclass = "navbar navbar-inverse navbar-fixed-top";
+        }
+        else
+        {
+            navclass = "navbar navbar-default navbar-fixed-top";
+        }
+    }
+    <div class="@navclass">
         <div class="container">
             <div class="navbar-header">
                 <a href="/">
@@ -68,99 +79,99 @@
                 @{
                     if (Session["usuario"] != null)
                     {
-                <ul class="nav navbar-nav navbar-right">
-                    @{
-                        if (Session["modoAdmin"].ToString() == "true")
-                        {
-
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    Administrar
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
-                                    <li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
-                                    <li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
-                                    <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
-                                    <li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
-                                    <li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
-                                    <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
-                                    <li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
-                                    <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
-                                    <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
-                                </ul>
-                            </li>
-                        }
-                    }
-                    @{
-                        if (Session["modoAdmin"].ToString() == "false")
-                        {
-                            int numeroNotificaciones = 0;
-                            NotificacionUsuarioCEN notificacionUsuarioCEN = new NotificacionUsuarioCEN();
-                            UsuarioCEN usuarioCEN = new UsuarioCEN();
-
-                            int OIDusuario = usuarioCEN.ReadNick(Session["usuario"].ToString()).Id;
-
-                            IList<NotificacionUsuarioEN> notificaciones = notificacionUsuarioCEN.DameNotificacionesNoLeidasPorUsuario(OIDusuario);
-
-                            numeroNotificaciones = notificaciones.Count;
-
-                            string estilo = "";
-
-                            if ((numeroNotificaciones) == 0)
-                            {
-                                estilo = "color: #999; font-size:1.15em";
-                            }
-                            else
-                            {
-                                estilo = "color:red ; font-size:1.15em";
-                            }
-
-
-                            <li><a href="/NotificacionUsuario/NoLeidas"><span class="glyphicon glyphicon-bell" style=@estilo></span> @numeroNotificaciones</a></li>
-                        }
-
-                    }
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            @Session["usuario"]
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            @{if (Session["modoAdmin"].ToString() == "false")
+                        <ul class="nav navbar-nav navbar-right">
+                            @{
+                                if (Session["modoAdmin"].ToString() == "true")
                                 {
-                                    <li>
-                                        @Html.ActionLink("Modificar perfil", "Modificar", "Usuario")
+
+                                    <li class="dropdown">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                            Administrar
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            <li>@Html.ActionLink("Usuarios", "Index", "Usuario")</li>
+                                            <li>@Html.ActionLink("Mensajes", "Index", "Mensaje")</li>
+                                            <li>@Html.ActionLink("Categorías de Usuarios", "Index", "CategoriaUsuario")</li>
+                                            <li>@Html.ActionLink("Proyectos", "Index", "Proyecto")</li>
+                                            <li>@Html.ActionLink("Solicitudes", "Index", "Solicitud")</li>
+                                            <li>@Html.ActionLink("Categorías de Proyectos", "Index", "CategoriaProyecto")</li>
+                                            <li>@Html.ActionLink("Eventos", "Index", "Evento")</li>
+                                            <li>@Html.ActionLink("Recuerdos", "Index", "Recuerdo")</li>
+                                            <li>@Html.ActionLink("Noticias", "Index", "Noticia")</li>
+                                            <li>@Html.ActionLink("Servicios", "Index", "Servicio")</li>
+                                        </ul>
                                     </li>
-                                    <li>
-										@Html.ActionLink("Mis mensajes", "MisMensajes", "Mensaje")
-									</li>
                                 }
                             }
-                            @{ if (Session["esAdmin"].ToString() == "true")
+                            @{
+                                if (Session["modoAdmin"].ToString() == "false")
                                 {
-                                    if (Session["modoAdmin"].ToString() == "false")
-                                    {
+                                    int numeroNotificaciones = 0;
+                                    NotificacionUsuarioCEN notificacionUsuarioCEN = new NotificacionUsuarioCEN();
+                                    UsuarioCEN usuarioCEN = new UsuarioCEN();
 
-                                        <li>
-                                            @Html.ActionLink("Entrar al modo Administrador", "Adminin", "Sesion")
-                                        </li>
+                                    int OIDusuario = usuarioCEN.ReadNick(Session["usuario"].ToString()).Id;
+
+                                    IList<NotificacionUsuarioEN> notificaciones = notificacionUsuarioCEN.DameNotificacionesNoLeidasPorUsuario(OIDusuario);
+
+                                    numeroNotificaciones = notificaciones.Count;
+
+                                    string estilo = "";
+
+                                    if ((numeroNotificaciones) == 0)
+                                    {
+                                        estilo = "color: #999; font-size:1.15em";
                                     }
                                     else
                                     {
-                                        <li>
-                                            @Html.ActionLink("Salir del modo Administrador", "Adminout", "Sesion")
-                                        </li>
+                                        estilo = "color:red ; font-size:1.15em";
                                     }
+
+
+                                    <li><a href="/NotificacionUsuario/NoLeidas"><span class="glyphicon glyphicon-bell" style=@estilo></span> @numeroNotificaciones</a></li>
                                 }
+
                             }
-                            <li>
-                                @Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                    @Session["usuario"]
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    @{if (Session["modoAdmin"].ToString() == "false")
+                                        {
+                                            <li>
+                                                @Html.ActionLink("Modificar perfil", "Modificar", "Usuario")
+                                            </li>
+                                            <li>
+                                                @Html.ActionLink("Mis mensajes", "MisMensajes", "Mensaje")
+                                            </li>
+                                        }
+                                    }
+                                    @{ if (Session["esAdmin"].ToString() == "true")
+                                        {
+                                            if (Session["modoAdmin"].ToString() == "false")
+                                            {
+
+                                                <li>
+                                                    @Html.ActionLink("Entrar al modo Administrador", "Adminin", "Sesion")
+                                                </li>
+                                            }
+                                            else
+                                            {
+                                                <li>
+                                                    @Html.ActionLink("Salir del modo Administrador", "Adminout", "Sesion")
+                                                </li>
+                                            }
+                                        }
+                                    }
+                                    <li>
+                                        @Html.ActionLink("Cerrar Sesión", "Logout", "Sesion")
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
-                    </li>
-                </ul>
                     }
 
                 }
