--- a/MVC_MultitecUA/Views/Servicio/VistaUsuario/Detalles.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/VistaUsuario/Detalles.cshtml
@@ -35,10 +35,9 @@
 
             <br />
             <br />
-
-            <center>
-                @Html.ActionLink("Volver a la lista", "ServiciosDisponibles")
-            </center>
+            <div>
+                @Html.ActionLink("Volver ", "ServiciosDisponibles",null,new { @class="btn btn-primary"})
+            </div>
 
         </div>
 
