--- a/MVC_MultitecUA/Views/Evento/VistaUsuario/Detalles.cshtml
+++ b/MVC_MultitecUA/Views/Evento/VistaUsuario/Detalles.cshtml
@@ -71,13 +71,14 @@
                 @Html.ActionLink("Crear recuerdo", "Create", "Recuerdo", new { idEvento = ViewData["IdEvento"] }, new { @class = "btn btn-default" })
                 &nbsp;
                 @Html.ActionLink("Ver Recuerdos", "porEvento", "Recuerdo", new { idEvento = ViewData["IdEvento"] }, new { @class = "btn btn-default" })
+                &nbsp;
+                @Html.ActionLink("Volver", "TodosEventos", "Evento", null, new { @class = "btn btn-primary" })
             </center>
 
             <br />
 
-            <center>
-                @Html.ActionLink("Volver a la lista", "TodosEventos", "Evento")
-            </center>
+                
+            
 
         </div>
 
