--- a/MVC_MultitecUA/Views/Evento/VistaUsuario/FiltrarAv.cshtml
+++ b/MVC_MultitecUA/Views/Evento/VistaUsuario/FiltrarAv.cshtml
@@ -23,7 +23,7 @@
             </div>
         </div>
     }
-    @Html.ActionLink("Filtro Avanzado", "PorFiltro", null, new { @class = "form-control", style = "width:10em; text-align:center;" })
+    @Html.ActionLink("Filtro Avanzado", "PorFiltro", null, new { @class = "btn btn-default", style = "width:10em; text-align:center;" })
 </div>
 
 
