--- a/MVC_MultitecUA/Views/Recuerdo/VistaUsuario/CrearRecuerdo.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/VistaUsuario/CrearRecuerdo.cshtml
@@ -16,7 +16,7 @@
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <hr />
+   
     @{ if (TempData.ContainsKey("vaciorecuerdo"))
         {
             <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @TempData["vaciorecuerdo"]</p>
@@ -50,7 +50,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Cuerpo, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Cuerpo, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextArea("Cuerpo", new { @class = "form-control" })
             @{ if (TempData.ContainsKey("formatocuerpo"))
                 {
                     <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> De 10 a 200 caracteres.</p>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label col-md-2" for="file">Foto: </label>
+        <label class="control-label col-md-2" for="file">Foto </label>
         <div class="col-md-10">
             <input class=" text-box single-line" id="file" name="file" type="file" value="" />
         </div>
@@ -70,11 +70,8 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
+            @Html.ActionLink("Volver", "porEvento", "Recuerdo", new { idEvento = ViewData["idEvento"] }, new { @class = "btn btn-primary" })
         </div>
     </div>
 </div>
 }
-
-<div>
-    @Html.ActionLink("Volver a la lista de recuerdos", "porEvento", "Recuerdo", new { idEvento = ViewData["idEvento"] }, null)
-</div>
