--- a/MVC_MultitecUA/Views/Recuerdo/VistaUsuario/Editar.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/VistaUsuario/Editar.cshtml
@@ -61,21 +61,22 @@
     </div>
 
     <div class="form-group">
-        <label class="control-label col-md-2" for="file">Foto (si no se indica, se borrará la foto que hubiese anteriormente): </label>
+        <label class="control-label col-md-2" for="file">Foto: </label>
         <div class="col-md-10">
             <input class=" text-box single-line" id="file" name="file" type="file" value="" />
         </div>
     </div>
 
+    <p style="margin-left:14em; color:red;"><span class="glyphicon glyphicon-info-sign" ></span> Si no se adjunta foto, se borrará la foto que hubiese anteriormente</p>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Guardar" class="btn btn-default" /> 
+            @Html.ActionLink("Volver", "porEvento", "Recuerdo", new { idEvento = Model.IdEvento }, new { @class = "btn btn-primary" })
+            
         </div>
     </div>
 </div>
 }
 
-    <div>
-        @Html.ActionLink("Volver a la lista de recuerdos", "porEvento", "Recuerdo", new { idEvento = Model.IdEvento }, null)
-    </div>
 
